--- a/style.css
+++ b/style.css
@@ -11,11 +11,41 @@ body{
 }
 .genius{
     display: grid;
-    grid-template-areas: 'green red' 'yellow blue';
+    grid-template-areas: 'verde vermelho' 'amarelo azul';
     grid-gap: 10px;
-    border: 2px solid rgb(19, 18, 18);
+    border: 1px solid rgb(19, 18, 18);
     background-color: #fff;
     border-radius: 100%;
     height: 600px;
     width: 600px;
+}
+
+
+
+.red{
+    grid-area: vermelho;
+    background-color:red;
+    border-top-right-radius: 100% ;
+}
+
+.green{
+    grid-area: verde;
+    background-color:green;
+    border-top-left-radius: 100% ;
+}
+
+.yellow{
+    grid-area: amarelo;
+    background-color:yellow;
+    border-bottom-left-radius:100% ;
+}
+
+.blue{
+    grid-area: azul;
+    background-color:blue;
+    border-bottom-right-radius:100% ;
+}
+
+.selected{
+    opacity: 0.8;
 }
